--- a/index.html
+++ b/index.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Website</title>
+    <!-- Google font Azeret Mono link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body>
-    <header></header>
+  <body class="azeret-mono-normal">
+    <header class="header">
+      <div class="header-container">
+        <img src="assets/Group.png" alt="A boy with a laptop" />
+        <div class="text-container">
+          <div class="title-container">
+            <h1 class="h-1">
+              "In the near future, I hope to become a Developer."
+            </h1>
+            <p class="p-1">
+              After becoming a Developer,I will create innovative and
+              user-friendly websites. My goal is to contribute to the digital
+              world
+            </p>
+          </div>
+          <button class="btn-primary">Contact with me</button>
+        </div>
+      </div>
+    </header>
     <main></main>
     <footer></footer>
   </body>
