added second section

--- a/index.html
+++ b/index.html
@@ -22,17 +22,114 @@
             <h1 class="h-1">
               "In the near future, I hope to become a Developer."
             </h1>
-            <p class="p-1">
-              After becoming a Developer,I will create innovative and
-              user-friendly websites. My goal is to contribute to the digital
-              world
-            </p>
+            <div class="p-1">
+              <p>
+                After becoming a Developer,I will create innovative and
+                user-friendly websites. My goal is to contribute to the digital
+                world
+              </p>
+            </div>
           </div>
           <button class="btn-primary">Contact with me</button>
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <div class="outer-container">
+          <div class="inner-container">
+            <div class="heading">
+              <h1 class="h-2">Why Web Development??</h1>
+              <div class="p-2">
+                <p>
+                  Developers has creative freedom, remote work opportunities,
+                  continuous learning and the ability to impact millions of
+                  users through web solutions.
+                </p>
+              </div>
+            </div>
+            <div class="sections">
+              <div class="inner-section">
+                <div class="texts">
+                  <h2>I will Do Coding and Change The World</h2>
+                  <p>
+                    I love coding. Coding is my passion. Without coding , my
+                    life is boring
+                  </p>
+                  <button class="btn-secondary">Learn More</button>
+                </div>
+                <img
+                  class="images"
+                  src="assets/Layer_1.png"
+                  alt="image of a developer1"
+                />
+              </div>
+            </div>
+            <div class="sections">
+              <div class="inner-section">
+                <img
+                  class="images"
+                  src="assets/Group 3.png"
+                  alt="image of a developer2"
+                />
+
+                <div class="texts">
+                  <h2>I will help People by creating Modern Web System</h2>
+                  <p>
+                    I love helping others. Helping in coding is a great job.
+                    Without helping others , we can't develop.
+                  </p>
+                  <button class="btn-secondary">Learn More</button>
+                </div>
+              </div>
+            </div>
+            <div class="sections">
+              <div class="inner-section">
+                <div class="texts">
+                  <h2>I will Do Coding and Make amazing things</h2>
+                  <p>
+                    I will use latest technologies like Html, Css ,JavaScript
+                    etc to develop websites. is boring
+                  </p>
+                  <button class="btn-secondary">Learn More</button>
+                </div>
+                <img
+                  class="images"
+                  src="assets/Group 4.png"
+                  alt="image of a developer3"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="my-inspiration-container">
+          <div class="title-container-2">
+            <h2 class="h-2">My Inspiration</h2>
+            <div class="p-2">
+              <p>
+                My inspiration to be a developer stems from the joy of creating,
+                problem-solving, and shaping digital experiences that empower
+                others.
+              </p>
+            </div>
+          </div>
+          <div class="video-container">
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/DGHn2uOAVCE?si=1G-DJedI0bBdVx3W"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
