added my inspiration section

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
           </div>
           <div class="video-container">
             <iframe
+              class="iframe"
               width="560"
               height="315"
               src="https://www.youtube.com/embed/DGHn2uOAVCE?si=1G-DJedI0bBdVx3W"
