--- a/index.html
+++ b/index.html
@@ -130,6 +130,59 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="my-current-target">
+          <div class="title-container-2">
+            <h2 class="h-2">My Current Target</h2>
+            <div class="p-2">
+              <p>
+                My target is to be a skilled web developer. I will learn Html,
+                Css, Bootstrap, Tailwind Css, JavaScript and other technologies.
+              </p>
+            </div>
+          </div>
+          <div class="card-container">
+            <div class="card card-bg-color-1">
+              <img src="assets/html.png" alt="html image" />
+              <h2 class="card-title">HTML</h2>
+              <div class="p-3">
+                <p>HTML stands for Hyper Text Markup Language</p>
+              </div>
+              <div class="card-link">
+                <a href="https://en.wikipedia.org/wiki/HTML" target="_blank"
+                  >Learn More</a
+                >
+              </div>
+            </div>
+            <div class="card card-bg-color-2">
+              <img src="assets/css.png" alt="html image" />
+              <h2 class="card-title">CSS</h2>
+              <div class="p-3">
+                <p>CSS stands for Casecading Style Sheet.</p>
+              </div>
+              <div class="card-link">
+                <a href="https://en.wikipedia.org/wiki/CSS" target="_blank"
+                  >Learn More</a
+                >
+              </div>
+            </div>
+            <div class="card card-bg-color-3">
+              <img src="assets/js.png" alt="html image" />
+              <h2 class="card-title">JavaScript</h2>
+              <div class="p-3">
+                <p>JavaScript is a popular programming language</p>
+              </div>
+              <div class="card-link">
+                <a
+                  href="https://en.wikipedia.org/wiki/JavaScript"
+                  target="_blank"
+                  >Learn More</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
