added input section

--- a/index.html
+++ b/index.html
@@ -184,6 +184,23 @@
         </div>
       </section>
     </main>
+
+    <div class="img-container">
+      <div class="text-container-2">
+        <div class="title-4">
+          <h1>I need Support</h1>
+          <div class="p-4">
+            <p>If you like my website, please support me.</p>
+          </div>
+        </div>
+        <div class="input">
+          <input
+            type="text"
+            placeholder="Suggest me any feedback for me"
+          /><button>Submit</button>
+        </div>
+      </div>
+    </div>
     <footer></footer>
   </body>
 </html>
