--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
               </p>
             </div>
           </div>
-          <button class="btn-primary">Contact with me</button>
+          <a href="#footer">
+            <button class="btn-primary">Contact with me</button></a
+          >
         </div>
       </div>
     </header>
@@ -201,6 +203,17 @@
         </div>
       </div>
     </div>
-    <footer></footer>
+    <footer id="footer">
+      <div class="footer-container">
+        <div class="footer-text">
+          <p>An Open Commitment by Awlad Hossain</p>
+        </div>
+        <div class="footer-icons">
+          <img src="assets/facebook.png" alt="fb icon" />
+          <img src="assets/github.png" alt="github icon" />
+          <img src="assets/linkedin-icon 1.png" alt="linkedin icon" />
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
